--- a/Admin Dashboard/Admin Dashboard.html
+++ b/Admin Dashboard/Admin Dashboard.html
@@ -106,7 +106,7 @@
                             <p class="text-2xl font-bold">120</p>
                         </div>
                         <div class="bg-yellow-400 py-1.5 px-2 rounded-full">
-                            <i class="fas fa-shopping-cart text-white"></i>
+                            <i class="fas fa-shopping-cart text-white rounded-full"></i>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                             <p class="text-2xl font-bold">$5,000</p>
                         </div>
                         <div class="bg-green-500 py-1.5 px-3 rounded-full">
-                            <i class="fas fa-dollar-sign text-white"></i>
+                            <i class="fas fa-dollar-sign text-white rounded-full"></i>
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                             <p class="text-2xl font-bold">85</p>
                         </div>
                         <div class="bg-blue-500 py-1.5 px-2 rounded-full">
-                            <i class="fas fa-users text-white"></i>
+                            <i class="fas fa-users text-white rounded-full"></i>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                         </div>
                         <div class="bg-red-500 py-1.5 px-2.5 rounded-full">
                             <i
-                                class="fas fa-exclamation-circle text-white"></i>
+                                class="fas fa-exclamation-circle text-white rounded-full"></i>
                         </div>
                     </div>
                 </div>
