--- a/Admin Dashboard/Admin Dashboard.html
+++ b/Admin Dashboard/Admin Dashboard.html
@@ -93,8 +93,7 @@
         <!-- Main Content -->
         <div class="p-6 md:mr-64 mt-16"> <!-- Add margin-top for navbar -->
             <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
-                <i class="fas fa-tachometer-alt text-yellow-400"></i> لوحة
-                التحكم
+                <i class="fas fa-tachometer-alt text-yellow-400"></i> الصفحة الرئيسية
             </h1>
             <div
                 class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
