--- a/Admin Dashboard/Products.html
+++ b/Admin Dashboard/Products.html
@@ -92,9 +92,11 @@
             </div>
 
             <!-- Add Product Button -->
+            <a href="NewProduct.html">
             <button class="w-full md:w-auto bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 whitespace-nowrap">
                 <i class="fas fa-plus"></i> إضافة منتج
             </button>
+            </a>
         </div>
 
         <!-- Products Table -->
@@ -102,20 +104,34 @@
             <table class="w-full border-collapse text-right">
                 <thead>
                     <tr class="bg-gray-200">
+                        <th class="p-3 border-b whitespace-nowrap">الصورة</th>
                         <th class="p-3 border-b whitespace-nowrap">اسم المنتج</th>
-                        <th class="p-3 border-b whitespace-nowrap">الوصف</th>
                         <th class="p-3 border-b whitespace-nowrap">السعر</th>
                         <th class="p-3 border-b whitespace-nowrap">الكمية المتاحة</th>
+                        <th class="p-3 border-b whitespace-nowrap">الحالة</th>
+                        <th class="p-3 border-b whitespace-nowrap">تاريخ الإضافة</th>
+                        <th class="p-3 border-b whitespace-nowrap">الفئة</th>
                         <th class="p-3 border-b whitespace-nowrap">الإجراءات</th>
                     </tr>
                 </thead>
                 <tbody>
                     <!-- Product 1 -->
                     <tr class="hover:bg-gray-50">
+                        <td class="p-3 border-b">
+                            <img src="../product1.jpg" alt="Product 1" class="w-16 h-16 rounded-lg object-cover">
+                        </td>
                         <td class="p-3 border-b whitespace-nowrap">كريم للشعر</td>
-                        <td class="p-3 border-b whitespace-nowrap">كريم لتنعيم الشعر</td>
                         <td class="p-3 border-b whitespace-nowrap">$20.00</td>
                         <td class="p-3 border-b whitespace-nowrap">50</td>
+                        <td class="p-3 border-b">
+                            <select class="bg-gray-100 p-1 rounded-lg">
+                                <option value="active">نشط</option>
+                                <option value="inactive">غير نشط</option>
+                                <option value="out_of_stock">غير متوفر</option>
+                            </select>
+                        </td>
+                        <td class="p-3 border-b whitespace-nowrap">2023-10-01</td>
+                        <td class="p-3 border-b whitespace-nowrap">العناية بالشعر</td>
                         <td class="p-3 border-b text-center">
                             <button class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
                                 <i class="fas fa-edit"></i> 
@@ -128,10 +144,21 @@
 
                     <!-- Product 2 -->
                     <tr class="hover:bg-gray-50">
+                        <td class="p-3 border-b">
+                            <img src="../product2.jpg" alt="Product 2" class="w-16 h-16 rounded-lg object-cover">
+                        </td>
                         <td class="p-3 border-b whitespace-nowrap">كريم للجسم</td>
-                        <td class="p-3 border-b whitespace-nowrap">كريم لترطيب الجسم</td>
                         <td class="p-3 border-b whitespace-nowrap">$15.00</td>
                         <td class="p-3 border-b whitespace-nowrap">30</td>
+                        <td class="p-3 border-b">
+                            <select class="bg-gray-100 p-1 rounded-lg">
+                                <option value="active">نشط</option>
+                                <option value="inactive">غير نشط</option>
+                                <option value="out_of_stock">غير متوفر</option>
+                            </select>
+                        </td>
+                        <td class="p-3 border-b whitespace-nowrap">2023-09-25</td>
+                        <td class="p-3 border-b whitespace-nowrap">العناية بالجسم</td>
                         <td class="p-3 border-b text-center">
                             <button class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
                                 <i class="fas fa-edit"></i> 
