--- a/Admin/Clients.html
+++ b/Admin/Clients.html
@@ -1,160 +1,179 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>العملاء - Soubai Shop</title>
-        <script src="https://cdn.tailwindcss.com"></script>
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-        <style>
-        body { font-family: 'Tajawal', sans-serif; padding-top: 64px; } /* Add padding for navbar */
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>العملاء - Soubai Shop</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <style>
+        body {
+            font-family: 'Tajawal', sans-serif;
+            padding-top: 64px;
+        }
+
+        /* Add padding for navbar */
     </style>
-    </head>
-    <body class="bg-gray-100 text-black flex flex-col min-h-screen">
-        <!-- Navbar -->
-        <nav class="bg-gray-800 text-white p-4 fixed top-0 left-0 right-0 z-50">
-            <div class="container mx-auto flex justify-between items-center">
-                <!-- Burger Menu for Sidebar (Visible on small screens) -->
-                <button id="menu-btn" class="md:hidden text-white">
-                    <i class="fas fa-bars"></i>
+</head>
+
+<body class="bg-gray-100 text-black flex flex-col min-h-screen">
+    <!-- Navbar -->
+    <nav class="bg-gray-800 text-white p-4 fixed top-0 left-0 right-0 z-50">
+        <div class="container mx-auto flex justify-between items-center">
+            <!-- Burger Menu for Sidebar (Visible on small screens) -->
+            <button id="menu-btn" class="md:hidden text-white">
+                <i class="fas fa-bars"></i>
+            </button>
+
+            <!-- Right Side: Shop Name -->
+            <div class="text-xl font-bold">
+                <i class="fas fa-store"></i> Soubai Shop
+            </div>
+
+            <!-- Left Side: Notifications and Profile Picture -->
+            <div class="flex flex-row gap-6 items-center space-x-2">
+                <!-- Notifications -->
+                <button class="relative">
+                    <i class="fas fa-bell"></i>
+                    <span class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-1">3</span>
                 </button>
 
-                <!-- Right Side: Shop Name -->
-                <div class="text-xl font-bold">
-                    <i class="fas fa-store"></i> Soubai Shop
-                </div>
-
-                <!-- Left Side: Notifications and Profile Picture -->
-                <div class="flex flex-row gap-6 items-center space-x-2">
-                    <!-- Notifications -->
-                    <button class="relative">
-                        <i class="fas fa-bell"></i>
-                        <span
-                            class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-1">3</span>
+                <!-- Profile Picture with Dropdown -->
+                <div class="relative">
+                    <button id="profile-btn" class="focus:outline-none">
+                        <img src="../download.png" alt="Profile" class="w-8 h-8 rounded-full">
                     </button>
-
-                    <!-- Profile Picture with Dropdown -->
-                    <div class="relative">
-                        <button id="profile-btn" class="focus:outline-none">
-                            <img src="../download.png" alt="Profile"
-                                class="w-8 h-8 rounded-full">
-                        </button>
-                        <!-- Profile Dropdown -->
-                        <div id="profile-dropdown"
-                            class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
-                            <button
-                                class="block px-4 py-2 hover:bg-gray-100">الملف
-                                الشخصي</button>
-                            <button
-                                class="block px-4 py-2 hover:bg-gray-100">الإعدادات</button>
-                            <button onclick="logout()"
-                                class="block px-4 py-2 hover:bg-gray-100">تسجيل
-                                الخروج</button>
-                        </div>
+                    <!-- Profile Dropdown -->
+                    <div id="profile-dropdown"
+                        class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
+                        <button class="block px-4 py-2 hover:bg-gray-100">الملف
+                            الشخصي</button>
+                        <button class="block px-4 py-2 hover:bg-gray-100">الإعدادات</button>
+                        <button onclick="logout()" class="block px-4 py-2 hover:bg-gray-100">تسجيل
+                            الخروج</button>
                     </div>
                 </div>
             </div>
-        </nav>
-
-        <!-- Sidebar -->
-        <div id="sidebar"
-            class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
-            <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
-            <nav class="space-y-2">
-                <a href="Dashboard.html" id="dashboard"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                    <i class="fas fa-tachometer-alt"></i> الصفحة الرئيسية
-                </a>
-                <a href="Orders.html" id="orders"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                    <i class="fas fa-shopping-cart"></i> الطلبات
-                </a>
-                <a href="Clients.html" id="clients"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                    <i class="fas fa-users"></i> العملاء
-                </a>
-                <a href="Products.html" id="products"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                    <i class="fas fa-box"></i> المنتجات
-                </a>
-                <a href="Categories.html" id="categories"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                    <i class="fas fa-list"></i> الفئات
-                </a>
-                <a href="Users.html" id="users"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                    <i class="fas fa-user-cog"></i> المستخدمين
-                </a>
-                <a href="#settings" id="settings"
-                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
-                    <i class="fas fa-cog"></i> إعدادات
-                </a>
-            </nav>
         </div>
+    </nav>
 
-        <!-- Main Content -->
-        <div class="p-6 md:mr-64"> <!-- Add margin-top for navbar -->
+    <!-- Sidebar -->
+    <div id="sidebar"
+        class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
+        <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
+        <nav class="space-y-2">
+            <a href="Dashboard.html" id="dashboard" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <i class="fas fa-tachometer-alt"></i> الصفحة الرئيسية
+            </a>
+            <a href="Orders.html" id="orders" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <i class="fas fa-shopping-cart"></i> الطلبات
+            </a>
+            <a href="Clients.html" id="clients" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <i class="fas fa-users"></i> العملاء
+            </a>
+            <a href="Products.html" id="products" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <i class="fas fa-box"></i> المنتجات
+            </a>
+            <a href="Categories.html" id="categories" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <i class="fas fa-list"></i> الفئات
+            </a>
+            <a href="Users.html" id="users" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <i class="fas fa-user-cog"></i> المستخدمين
+            </a>
+            <a href="#settings" id="settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <i class="fas fa-cog"></i> إعدادات
+            </a>
+        </nav>
+    </div>
 
-            <div class="flex justify-between align-center mb-6">
-                <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
-                    <i class="fas fa-users text-yellow-400"></i> العملاء
-                </h1>
-                <!-- Add Client Button -->
-                <a href="NewClient.html">
-                    <button
-                        class="w-full md:w-auto bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 whitespace-nowrap">
-                        <i class="fas fa-plus"></i> إضافة عميل
-                    </button>
-                </a>
-            </div>
-            <!-- Error Message -->
-            <div id="error-message"
+    <!-- Main Content -->
+    <div class="p-6 md:mr-64"> <!-- Add margin-top for navbar -->
+
+        <div class="flex justify-between align-center mb-6">
+            <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
+                <i class="fas fa-users text-yellow-400"></i> العملاء
+            </h1>
+            <!-- Add Client Button -->
+            <a href="NewClient.html">
+                <button
+                    class="w-full md:w-auto bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 whitespace-nowrap">
+                    <i class="fas fa-plus"></i> إضافة عميل
+                </button>
+            </a>
+        </div>
+        <!-- Error Message -->
+        <!-- <div id="error-message"
                 class="hidden border border-red-500 rounded-lg p-4 mb-4">
                 <p class="text-red-500">
                     <i class="fas fa-exclamation-triangle"></i>
                     حدث خطأ ما. يرجى المحاولة مرة أخرى</p>
-            </div>
+            </div> -->
 
-            <!-- success Message -->
-            <div id="success-message"
+        <!-- success Message -->
+        <!-- <div id="success-message"
                 class="hidden border border-green-500 rounded-lg p-4 mb-4">
                 <p class="text-green-500">
                     <i class="fas fa-check-circle"></i> تمت العملية بنجاح</p>
-            </div>
+            </div> -->
 
-            <!-- Search Bar and Add Client Button -->
-            <div
-                class="flex flex-col md:flex-row justify-between items-center mb-4 gap-4">
-                <!-- Search Bar -->
+        <!-- Search Bar and Add Client Button -->
+        <!-- <div
+                class="flex flex-col md:flex-row justify-between items-center mb-4 gap-4">                
                 <div class="w-full md:w-1/2">
                     <input
                         type="text"
                         placeholder="ابحث عن عميل..."
                         class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
                 </div>
+            </div> -->
 
-            </div>
-
-            <!-- Clients Table -->
-            <div  class="overflow-x-auto bg-white rounded-lg shadow">
-                <table class="w-full border-collapse text-right">
-                    <thead>
-                        <tr class="bg-gray-200">
-                            <th class="p-3 border-b whitespace-nowrap">اسم
-                                العميل</th>
-                            <th class="p-3 border-b whitespace-nowrap">رقم
-                                الهاتف</th>
-                            <th
-                                class="p-3 border-b whitespace-nowrap">المدينة</th>
-                            <th
-                                class="p-3 border-b whitespace-nowrap">الإجراءات</th>
-                        </tr>
-                    </thead>
-                    <tbody id="clients-table">
-                    
-                    </tbody>
-                </table>
+        <!-- Clients Table -->
+        <div class="overflow-x-auto bg-white rounded-lg shadow">
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <!-- Controls -->
+                <div class="flex flex-col sm:flex-row gap-4 mb-4">
+                    <input type="text" id="clientsTable-search" placeholder="ابحث عن طلب..."
+                        class="w-full p-2 border rounded-lg">
+                </div>
+                <div class="overflow-x-auto bg-white rounded-lg shadow">
+                    <table class="w-full border-collapse text-center" id="clientsTable">
+                        <thead>
+                            <tr class="bg-gray-200">
+                                <th class="px-4 py-2 whitespace-nowrap">اسم
+                                    العميل</th>
+                                <th class="px-4 py-2 whitespace-nowrap">رقم
+                                    الهاتف</th>
+                                <th class="px-4 py-2 whitespace-nowrap">المدينة</th>
+                                <th class="px-4 py-2 whitespace-nowrap">الإجراءات</th>
+                            </tr>
+                        </thead>
+                        <tbody id="clients-table">
+                            <tr>
+                                <td colspan="4" class="text-center">
+                                    <div id="loadingAnimation" class="text-blue-500 mt-8 mb-6 items-center" dir="rtl">
+                                        <i class="fa-solid fa-spinner fa-spin fa-2x"></i>
+                                        <span class="ml-2">تحميل...</span>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- Pagination -->
+                <div id="customPagination" class="flex items-center justify-end gap-2 mt-2">
+                    <button id="prevPage"
+                        class="px-4 py-2 bg-gray-300 text-gray-700 rounded-md hover:bg-gray-400 transition">
+                        السابق
+                    </button>
+                    <span id="pageInfo" class="text-gray-800 font-semibold">
+                        الصفحة 1
+                    </span>
+                    <button id="nextPage"
+                        class="px-4 py-2 bg-gray-300 text-gray-700 rounded-md hover:bg-gray-400 transition">
+                        التالي
+                    </button>
+                </div>
             </div>
         </div>
 
@@ -170,21 +189,19 @@
                             class="fas fa-times"></i></button>
                 </div>
                 <!-- Error Message -->
-                <div id="error-message1"
-                    class="hidden border border-red-500 rounded-lg p-4 mb-4">
+                <div id="error-message1" class="hidden border border-red-500 rounded-lg p-4 mb-4">
                     <p class="text-red-500">
                         <i class="fas fa-exclamation-triangle"></i>
-                         حدث خطأ في الخادم، يرجى المحاولة مرة أخرى</p>
+                        حدث خطأ في الخادم، يرجى المحاولة مرة أخرى
+                    </p>
                 </div>
                 <div id="updateForm">
                     <div class="mb-4">
-                        <label for="ClientName"
-                            class="block text-gray-700 mb-2">اسم العميل</label>
+                        <label for="ClientName" class="block text-gray-700 mb-2">اسم العميل</label>
                         <input type="text" id="ClientName"
                             class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
                             required>
-                        <p id="ClientNameError"
-                            class="text-red-500 mt-1"> </p>
+                        <p id="ClientNameError" class="text-red-500 mt-1"> </p>
                     </div>
                     <div class="mb-4">
                         <label for="ClientPhone" class="block text-gray-700 mb-2">رقم الهاتف</label>
@@ -234,10 +251,14 @@
         <script src="JS/LogOut.js"></script>
         <script src="JS/sidebar.js"></script>
         <script src="JS/mobileView.js"></script>
+        <!-- data table -->
+        <script src="includes/jquery-3.7.0.js"></script>
+        <script src="includes/jquery.dataTables.min.js"></script>
+        <script src="includes/datatables.tailwind.js"></script>
         <script src="JS/ClientsManagement.js"></script>
         <script>
             clientID = null;
-            document.addEventListener('DOMContentLoaded', function() {
+            document.addEventListener('DOMContentLoaded', function () {
                 sidebarhandeler("gererClients");
                 fetchClients();
             })
@@ -265,6 +286,7 @@
                 document.getElementById('updateModal').classList.add('hidden');
                 categoryID = null;
             }
-    </script>
-    </body>
+        </script>
+</body>
+
 </html>
