--- a/Admin/Users.html
+++ b/Admin/Users.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
-        body { font-family: 'Tajawal', sans-serif; padding-top: 64px; } /* Add padding for navbar */
+        body {
+            font-family: 'Tajawal', sans-serif;
+            padding-top: 64px;
+        }
+
+        /* Add padding for navbar */
     </style>
 </head>
+
 <body class="bg-gray-100 text-black flex flex-col min-h-screen">
     <!-- Navbar -->
     <nav class="bg-gray-800 text-white p-4 fixed top-0 left-0 right-0 z-50">
@@ -38,15 +45,13 @@
                         <img src="../download.png" alt="Profile" class="w-8 h-8 rounded-full">
                     </button>
                     <!-- Profile Dropdown -->
-                    <div id="profile-dropdown" class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
-                        <button
-                                class="block px-4 py-2 hover:bg-gray-100">الملف
-                                الشخصي</button>
-                            <button
-                                class="block px-4 py-2 hover:bg-gray-100">الإعدادات</button>
-                            <button onclick="logout()"
-                                class="block px-4 py-2 hover:bg-gray-100">تسجيل
-                                الخروج</button>
+                    <div id="profile-dropdown"
+                        class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
+                        <button class="block px-4 py-2 hover:bg-gray-100">الملف
+                            الشخصي</button>
+                        <button class="block px-4 py-2 hover:bg-gray-100">الإعدادات</button>
+                        <button onclick="logout()" class="block px-4 py-2 hover:bg-gray-100">تسجيل
+                            الخروج</button>
                     </div>
                 </div>
             </div>
@@ -54,7 +59,8 @@
     </nav>
 
     <!-- Sidebar -->
-    <div id="sidebar" class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
+    <div id="sidebar"
+        class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
         <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
         <nav class="space-y-2">
             <a href="Dashboard.html" id="dashboard" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
@@ -88,125 +94,118 @@
             <h1 class="text-center text-2xl font-bold text-black md:text-800 mb-4">
                 <i class="fas fa-user-cog text-yellow-400"></i> المستخدمين
             </h1>
-            <a href="NewUser.html" class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+            <a href="NewUser.html"
+                class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
                 <i class="fas fa-plus"></i> إضافة مستخدم
             </a>
         </div>
-        
+
 
         <!-- Error Message -->
-        <div id="error-message" class="hidden border border-red-500 rounded-lg p-4 mb-4">
+        <!-- <div id="error-message" class="hidden border border-red-500 rounded-lg p-4 mb-4">
             <p class="text-red-500">حدث خطأ ما. يرجى المحاولة مرة أخرى</p>
-        </div>
+        </div> -->
 
         <!-- Users Table -->
         <div class="overflow-x-auto bg-white rounded-lg shadow-lg">
-            <table class="min-w-full">
-                <thead>
-                    <tr class="bg-gray-200">
-                        <th class="px-4 py-2 text-right">الاسم الكامل</th>
-                        <th class="px-4 py-2 text-right">البريد الإلكتروني</th>
-                        <th class="px-4 py-2 text-right">الصلاحيات</th>
-                        <th class="px-4 py-2 text-right">الإجراءات</th>
-                    </tr>
-                </thead>
-                <tbody id="users-table-body">
-                    <!-- Users will be dynamically inserted here -->
-                     <tr class="bg-white">
-                        <td class="px-4 py-2 text-right whitespace-nowrap">John Doe</td>
-                        <td class="px-4 py-2 text-right whitespace-nowrap">u3m0o@example.com</td>
-                        <td class="px-4 py-2 text-right whitespace-nowrap">- ادارة الطلبات - ادارة المنتجات</td>
-                        <td class="px-4 py-2 text-right flex flex-row gap-2 items-center whitespace-nowrap">
-                            <button class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600 transition duration-300">
-                                <i class="fas fa-edit"></i> 
-                            </button>
-                            <button class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600 transition duration-300">
-                                <i class="fas fa-trash"></i> 
-                            </button>
-                        </td>
-                     </tr>
-                </tbody>
-            </table>
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <!-- Controls -->
+                <div class="flex flex-col sm:flex-row gap-4 mb-4">
+                    <input type="text" id="usersTable-search" placeholder="ابحث عن طلب..."
+                        class="w-full p-2 border rounded-lg">
+                </div>
+                <div class="overflow-x-auto bg-white rounded-lg shadow">
+                    <table class="w-full border-collapse text-center" id="usersTable">
+                        <thead>
+                            <tr class="bg-gray-200">
+                                <th class="px-4 py-2">الاسم الكامل</th>
+                                <th class="px-4 py-2">البريد الإلكتروني</th>
+                                <th class="px-4 py-2">الإجراءات</th>
+                            </tr>
+                        </thead>
+                        <tbody id="users-table">
+                            <!-- Users will be dynamically inserted here -->
+                            <tr>
+                                <td colspan="3" class="text-center">
+                                    <div id="loadingAnimation" class="text-blue-500 mt-8 mb-6 items-center" dir="rtl">
+                                        <i class="fa-solid fa-spinner fa-spin fa-2x"></i>
+                                        <span class="ml-2">تحميل...</span>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <!-- Pagination -->
+                <div id="customPagination" class="flex items-center justify-end gap-2 mt-2">
+                    <button id="prevPage"
+                        class="px-4 py-2 bg-gray-300 text-gray-700 rounded-md hover:bg-gray-400 transition">
+                        السابق
+                    </button>
+                    <span id="pageInfo" class="text-gray-800 font-semibold">
+                        الصفحة 1
+                    </span>
+                    <button id="nextPage"
+                        class="px-4 py-2 bg-gray-300 text-gray-700 rounded-md hover:bg-gray-400 transition">
+                        التالي
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hidden" id="pop-up-1">
+        <div
+            class="fixed inset-0 items-center grid h-screen place-items-center justify-center bg-gray-800 bg-opacity-75">
+            <div class="bg-white p-6 rounded-lg shadow-lg w-96">
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-xl font-bold">Confirmation </h2>
+                    <button type="button" onclick="closePopUp('pop-up-1')"
+                        class="text-gray-500 text-xl font-black hover:text-red-600 close-button"
+                        data-popup-id="pop-up-4">&times;</button>
+                </div>
+                <hr class="mb-4">
+                <h3 class="font-semibold text-base mb-4">هل أنت متأكد أنك تريد حذف هذا المستخدم؟</h3>
+                </h3>
+                <div class="flex justify-end">
+                    <button type="button"
+                        class="ml-2 px-4 py-2 rounded bg-gray-300 text-gray-700 hover:bg-gray-400 hover:text-gray-800"
+                        onclick="closePopUp('pop-up-1')" data-popup-id="pop-up-4">الغاء</button>
+                    <button type="button" id="deleteContratButton"
+                        class="px-4 py-2 rounded bg-red-500 text-white hover:bg-red-600">نعم</button>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="JS/sidebar.js"></script>
     <script src="JS/LogOut.js"></script>
     <script src="JS/mobileView.js"></script>
+    <!-- data table -->
+    <script src="includes/jquery-3.7.0.js"></script>
+    <script src="includes/jquery.dataTables.min.js"></script>
+    <script src="includes/datatables.tailwind.js"></script>
+    <script src="JS/users.js"></script>
+
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            sidebarhandeler("gererUsers");
-        })
-
-        // Fetch users from the API
-        async function fetchUsers() {
-            try {
-                const response = await fetch('https://sbaishop.com/api/users', {
-                    method: 'GET',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': `Bearer ${token}`,
-                    },
-                });
-
-                if (!response.ok) {
-                    throw new Error('فشل جلب بيانات المستخدمين');
-                }
-
-                const data = await response.json();
-                displayUsers(data.user); // Assuming the API returns an array of users in `data.data`
-            } catch (error) {
-                console.error('حدث خطأ:', error);
-                document.getElementById('error-message').classList.remove('hidden');
+        function openPopUp(popupId, userId) {
+            const popUp = document.getElementById(popupId);
+            if (popUp) {
+                popUp.style.display = 'block';
             }
-        }
-
-        // Display users in the table
-        function displayUsers(users) {
-            const usersTableBody = document.getElementById('users-table-body');
-            usersTableBody.innerHTML = ''; // Clear existing content
-
-            users.forEach(user => {
-                const row = document.createElement('tr');
-                row.classList.add('border-b', 'border-gray-200');
-
-                // Full Name
-                const fullNameCell = document.createElement('td');
-                fullNameCell.classList.add('px-4', 'py-2');
-                fullNameCell.textContent = user.fullName;
-                row.appendChild(fullNameCell);
-
-                // Email
-                const emailCell = document.createElement('td');
-                emailCell.classList.add('px-4', 'py-2');
-                emailCell.textContent = user.email;
-                row.appendChild(emailCell);
-
-                // Permissions
-                const permissionsCell = document.createElement('td');
-                permissionsCell.classList.add('px-4', 'py-2');
-                permissionsCell.textContent = user.permissions.join(', '); // Assuming permissions is an array
-                row.appendChild(permissionsCell);
-
-                // Actions
-                const actionsCell = document.createElement('td');
-                actionsCell.classList.add('px-4', 'py-2', 'flex', 'gap-2');
-                const editButton = document.createElement('button');
-                editButton.classList.add('bg-yellow-400', 'text-black', 'px-2', 'py-1', 'rounded-lg', 'hover:bg-yellow-500');
-                editButton.innerHTML = '<i class="fas fa-edit"></i> تعديل';
-                const deleteButton = document.createElement('button');
-                deleteButton.classList.add('bg-red-500', 'text-white', 'px-2', 'py-1', 'rounded-lg', 'hover:bg-red-600');
-                deleteButton.innerHTML = '<i class="fas fa-trash"></i> حذف';
-                actionsCell.appendChild(editButton);
-                actionsCell.appendChild(deleteButton);
-                row.appendChild(actionsCell);
-
-                usersTableBody.appendChild(row);
+            document.getElementById('deleteContratButton').addEventListener('click', function () {
+                deleteUser(userId);
             });
         }
 
-        // Fetch users on page load
-        document.addEventListener('DOMContentLoaded', fetchUsers);
+        // Function to close a specific pop-up
+        function closePopUp(popupId) {
+            const popUp = document.getElementById(popupId);
+            if (popUp) {
+                popUp.style.display = 'none';
+            }
+        }
     </script>
 </body>
+
 </html>
